fix: dashboard names invisible due to same background color (#5758)

--- a/frontend/src/container/ListOfDashboard/DashboardList.styles.scss
+++ b/frontend/src/container/ListOfDashboard/DashboardList.styles.scss
@@ -1067,7 +1067,7 @@
 				color: var(--bg-ink-500);
 			}
 			.subtitle {
-				color: var(--bg-vanilla-400);
+				color: var(--bg-ink-300);
 			}
 
 			.ant-table-row {
@@ -1087,6 +1087,10 @@
 
 					.dashboard-title {
 						color: var(--bg-slate-300);
+
+						.title {
+							color: var(--bg-ink-500);
+						}
 					}
 
 					.title-with-action {
